--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@ customer's hands.</pre>
         
         <!-- footer -->
         <footer>
-            <div class="footer">
+            <div class="footer container">
                 <div class="footer-item">
                     <div class="mobile">
                         <div class="apple-play">
@@ -159,6 +159,7 @@ customer's hands.</pre>
                     </div>
                 </div>
             </div>
+            <div class="banner-2"></div>
         </footer>
         <!-- footer -->
     </div>
